--- a/src/main/resources/templates/tutor/tutor.html
+++ b/src/main/resources/templates/tutor/tutor.html
@@ -87,10 +87,10 @@
                                 <b>О себе:</b> <span th:text="*{comment}"></span>
                             </div>
 
-                            <div>
-                                <b>Цена за занятие:</b>
-                                <span type="span" class="label label-primary" th:text="*{price}"></span>
-                            </div>
+                            <!--<div>-->
+                                <!--<b>Цена за занятие:</b>-->
+                                <!--<span type="span" class="label label-primary" th:text="*{price}"></span>-->
+                            <!--</div>-->
                             <div>
                                 <b>Типы занятий:</b>
                                 <span type="span" class="label label-primary" th:each="l : *{lessonTypes}"
