--- a/src/main/resources/templates/order/new.html
+++ b/src/main/resources/templates/order/new.html
@@ -38,20 +38,32 @@
                         </div>
                     </div>
 
-                    <label>Количество занятий в месяц (Если вы хотите заниматься 1 ра в неделю, то 4, если 2, то 8 и
-                        т.д.)
-                        <span class="color-red">*</span>
-                    </label>
-                    <input rows="8" class="form-control" th:field="*{pereodicity}"/>
+                    <div data-bind="foreach : $root.orderDtos()" class="row margin-bottom-20">
+                        <p data-bind="text : $root.orderDtos()[$index()].subject.name"></p>
+                        <div data-bind="foreach : $root.orderDtos()[$index()].tutorSubjectDurations" class="col-md-8 col-md-offset-0">
+                            <input type="checkbox" data-bind="click: function() { $root.selectDuration($parentContext.$index(), $index())}"/>
+                            <p data-bind="text : $root.orderDtos()[$parentContext.$index()].tutorSubjectDurations[$index()].duration.code.name"></p>
+                            <p data-bind="text : $root.orderDtos()[$parentContext.$index()].tutorSubjectDurations[$index()].price"></p>
+                        </div>
+                        <select id="dialysisSelect" data-bind="event: {change: function(){$root.addPeriodicity($root.orderDtos()[$index()].subject.id, $data.item)}},
+                        options: $root.periodicities, optionsCaption: '&nbsp;', selectize: {'allowEmptyOption': true}">
+                        </select>
+                    </div>
+
+                    <!--<label>Количество занятий в месяц (Если вы хотите заниматься 1 ра в неделю, то 4, если 2, то 8 и-->
+                    <!--т.д.)-->
+                    <!--<span class="color-red">*</span>-->
+                    <!--</label>-->
+                    <!--<input rows="8" class="form-control" th:field="*{pereodicity}"/>-->
 
 
-                    <label>Тип занятия
-                        <span class="color-red">*</span>
-                    </label>
-                    <select id="roles" class="form-control margin-bottom-20" th:field="*{lessonType}">
-                        <option value=""></option>
-                        <option th:each="l : ${lessonTypes}" th:value="${l.id}" th:text="${l.name}"/>
-                    </select>
+                    <!--<label>Тип занятия-->
+                    <!--<span class="color-red">*</span>-->
+                    <!--</label>-->
+                    <!--<select id="roles" class="form-control margin-bottom-20" th:field="*{lessonType}">-->
+                    <!--<option value=""></option>-->
+                    <!--<option th:each="l : ${lessonTypes}" th:value="${l.id}" th:text="${l.name}"/>-->
+                    <!--</select>-->
 
                     <input type="hidden" th:field="*{client}"/>
                     <input type="hidden" th:field="*{tutor}"/>
@@ -69,6 +81,8 @@
     <div th:replace="fragments/footer :: footer"></div>
 </div>
 <script th:src="@{/js/jquery/jquery.min.js}"/>
+<script th:src="@{/js/jquery/jquery-ui.min.js}"/>
+<script th:src="@{/js/thirdparty/moment.min.js}"/>
 <script th:src="@{/js/bootstrap/bootstrap.min.js}"/>
 <script th:src="@{/js/thirdparty/scripts.js}"/>
 <script th:src="@{/js/jquery/jquery.isotope.js}"/>
@@ -78,5 +92,18 @@
 <script th:src="@{/js/thirdparty/slimbox2.js}"/>
 <script th:src="@{/js/thirdparty/modernizr.custom.js}"/>
 
+<script th:src="@{/js/jquery/jquery.inputmask.bundle.min.js}"/>
+<script th:src="@{/js/knockout/knockout.js}"/>
+<script th:src="@{/js/knockout/knockout.inputmask.js}"/>
+<script th:src="@{/js/knockout/validation/knockout-validation-min.js}"/>
+<script th:src="@{/js/thirdparty/datepicker-ru.js}"/>
+<script th:src="@{/js/order.js}"/>
+<script th:src="@{/js/knockout.validation.rules.js}"/>
+<script th:src="@{/js/knockout/knockout.datepicker.js}"/>
+<script th:inline="javascript">
+    $(function () {
+        ko.applyBindings(new User([[${order}]], [[${orderDtos}]]));
+    });
+</script>
 </body>
 </html>
