--- a/src/main/resources/templates/tutor/new.html
+++ b/src/main/resources/templates/tutor/new.html
@@ -67,12 +67,14 @@
 <script th:src="@{/js/thirdparty/modernizr.custom.js}"/>
 
 <script th:src="@{/js/jquery/jquery.inputmask.bundle.min.js}"/>
+<script th:src="@{/js/jquery/jquery.selectric.min.js}"/>
+
 <script th:src="@{/js/knockout/knockout.js}"/>
 <script th:src="@{/js/knockout/knockout.inputmask.js}"/>
-<script th:src="@{/js/knockout/validation/knockout-validation-min.js}"/>
+<script th:src="@{/js/knockout/knockout-validation-min.js}"/>
 <script th:src="@{/js/thirdparty/datepicker-ru.js}"/>
 <script th:src="@{/js/tutor.js}"/>
-<script th:src="@{/js/knockout.validation.rules.js}"/>
+<script th:src="@{/js/knockout/validation/knockout.validation.rules.js}"/>
 <script th:src="@{/js/knockout/knockout.datepicker.js}"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
 
