--- a/src/main/resources/templates/order/approved.html
+++ b/src/main/resources/templates/order/approved.html
@@ -23,11 +23,11 @@
     <div th:replace="fragments/menu :: menu('tutors')"></div>
     <div class="container">
         <div class="container background-white">
-            <div class="row margin-vert-30">
+            <div class="margin-vert-30">
                 <p>Заказ подтвержден. Для связи с клиентом и оговорки деталей первого занятия, свяжитесь с ним по
                     телефону указанному ниже.</p>
 
-                <div class="row">
+                <div class="">
                     <div>
                         <b>ФИО:</b> <span th:text="${client.user.getFullName()}"></span>
                     </div>
