--- a/src/main/resources/templates/order/declined.html
+++ b/src/main/resources/templates/order/declined.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="container background-white">
             <div class="row margin-vert-30">
-                <p>Заказ откланен.</p>
+                <p>Заказ отклонен.</p>
             </div>
         </div>
     </div>
