Added logic for duration lessons

--- a/src/main/resources/templates/client/client.html
+++ b/src/main/resources/templates/client/client.html
@@ -193,40 +193,37 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div id='root'>
-        <header>
-            <nav class="navbar navbar-inverse">
-                <div class="container-fluid hui">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="#">Mini Chat</a>
-                    </div>
+        <!--<div id='root'>-->
 
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav navbar-center">
-                            <li>
-                                <a href="#">
-                                    <div id="current"></div>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="/logout">Logout</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
+                <!--<nav class="navbar navbar-inverse">-->
+                    <!--<div class="container-fluid hui">-->
+                        <!--<div class="navbar-header">-->
+                            <!--<a class="navbar-brand" href="#">Mini Chat</a>-->
+                        <!--</div>-->
 
-        <div class="container-fluid main-content">
-            <div id='online' class="container col-lg-2 col-md-3 col-sm-4"></div>
-            <div id='messages' class="container message-block col-lg-9 col-md-8 col-sm-7"></div>
-        </div>
+                        <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
+                            <!--<ul class="nav navbar-nav navbar-center">-->
+                                <!--<li>-->
+                                    <!--<a href="#">-->
+                                        <!--<div id="current"></div>-->
+                                    <!--</a>-->
+                                <!--</li>-->
+                            <!--</ul>-->
+                            <!--<ul class="nav navbar-nav navbar-right">-->
+                                <!--<li><a href="/logout">Logout</a></li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</nav>-->
 
-        <footer>
-            <div id="message-form"></div>
-        </footer>
+            <!--<div class="container-fluid main-content">-->
+                <!--<div id='online' class="container col-lg-2 col-md-3 col-sm-4"></div>-->
+                <!--<div id='messages' class="container message-block col-lg-9 col-md-8 col-sm-7"></div>-->
+            <!--</div>-->
+
+                <!--<div id="message-form"></div>-->
+        <!--</div>-->
     </div>
 
 </div>
