--- a/src/main/resources/templates/order/new.html
+++ b/src/main/resources/templates/order/new.html
@@ -58,7 +58,7 @@
                                 <td data-bind="text :  $root.orderDtos()[$parentContext.$index()].tutorSubjectDurations[$index()].duration.duration"></td>
                                 <td data-bind="text : $root.orderDtos()[$parentContext.$index()].tutorSubjectDurations[$index()].price"></td>
                                 <td>
-                                    <input type="checkbox" data-bind="
+                                    <input type="radio" data-bind="
                                 click: function() { $root.selectDuration($parentContext.$index(), $index())}"/>
                                 </td>
                             </tr>
@@ -67,13 +67,13 @@
                         <div class="margin-bottom-20">
                         <p>Выберите количество занятий в месяц</p>
                         <select id="dialysisSelect" data-bind="value: $root.orderLessons()[$index()].periodicity,
-                        options: $root.periodicities">
+                        options: $root.periodicities, optionsCaption:'Выберите количество занятий'">
                         </select>
                         </div>
                         <div class="margin-bottom-20">
                         <p>Выберите вид проведения занятий</p>
                         <select class="" id="dialysisSelect" data-bind="value: $root.orderLessons()[$index()].lessonType,
-                        optionsText: 'name', options: $root.lt">
+                        optionsText: 'name', options: $root.lt, optionsCaption:'Выберите вид занятий'">
                         </select>
             </div>
                     </div>
