--- a/src/main/resources/templates/tutor/tutor.html
+++ b/src/main/resources/templates/tutor/tutor.html
@@ -110,6 +110,18 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-lg-6 text-right" th:if="${account}">
+                            <div class="col-lg-3" th:if="!${#lists.isEmpty(orders)}">
+                                <a th:href="@{'/tutors/' + *{id} + '/orders'}" class="btn btn-success"
+                                th:text="'Заказы ' + ${#lists.size(orders)}"></a>
+                            </div>
+                            <div class="col-lg-3">
+                                <a th:href="@{'/tutors/' + *{id} + '/edit'}" class="btn btn-default">Редактировать
+                                    данные</a>
+                            </div>
+                        </div>
+
                     </div>
                     <div th:if="!*{#strings.isEmpty(status)}">
                         <hr/>
@@ -119,19 +131,52 @@
                         <hr/>
                     </div>
 
+                    <div th:if="${account}">
+                        <hr/>
+                        <div class="row animate fadeInUp">
+                            <h2 class="text-center margin-top-10" th:text="'Ваша текущая ставка ' + *{duty} + '%'"></h2>
+                        </div>
+                        <hr/>
+                    </div>
+
                     <div class="col-md-12">
                         <div th:each="relation : ${relations}">
+                            <hr/>
+
+                            <div class="col-md-12 margin-vert-30">
+                                <div class="col-md-6" >
+                                    <h3>
+                                        <p th:text="'Проведено занятий ' + ${#lists.size(relation.historyLessons)}"></p>
+                                    </h3>
+                                    <h3>
+                                        <p th:text="'Заработано ' + ${#aggregates.sum(relation.historyLessons.![price])} + ' BYN'"></p>
+                                    </h3>
+                                    <h3>
+                                        <p th:text="'Необходимо уплатить ' + ${#aggregates.sum(relation.historyLessons.![duty])} + ' BYN'"></p>
+                                    </h3>
+                                </div>
+                                <div class="col-md-6">
+                                    <div th:each="lesson : ${relation.clientTutorLessons}">
+                                        <span class="label label-primary"  th:text="${lesson.subject.name}"></span>
+                                        <span class="label label-primary" th:text="${lesson.duration.duration}"></span>
+                                        <span class="label label-primary" th:text="${lesson.periodicity} + ' раза в месяц'"></span>
+                                        <span class="label label-primary" th:text="${lesson.lessonType.name}"></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+
                             <div class="row">
-                                <div class="col-md-1 margin-vert-20">
+                                <div class="col-md-2 margin-vert-20">
                                     <i class="fa-user fa-3x color-primary"></i>
                                 </div>
-                                <div class="col-md-11 margin-vert-30">
+                                <div class="col-md-10 margin-vert-30">
                                     <h3>Ученик <a th:text="${relation.client.user.getFullName()}"
                                                   th:href="@{'/clients/' + ${relation.client.id}}"></a></h3>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-1 margin-vert-20">
+                                <div class="col-md-2 margin-vert-20">
                                     <a th:href="@{'/relations/' + ${relation.id} + '/history'}">
                                         <i class="fa-plus-square fa-2x color-primary"></i>
                                     </a>
@@ -141,38 +186,31 @@
                                         занятие</a></h4>
                                 </div>
                             </div>
+                            </div>
+                            <div class="col-md-6">
+
                             <div class="row" th:if="!${#lists.isEmpty(relation.historyLessons)}">
-                                <div class="col-md-1 margin-vert-20">
+                                <div class="col-md-2 margin-vert-20">
                                     <i class="fa-home fa-3x color-primary"></i>
                                 </div>
 
-                                <div class="col-md-11 margin-vert-30">
+                                <div class="col-md-10 margin-vert-30">
                                     <h3 class="panel-title"
                                         th:text="${'Домашнее задание: ' + relation.historyLessons[0].homework}"></h3>
                                 </div>
                             </div>
                             <div class="row" th:if="!${#lists.isEmpty(relation.historyLessons)}">
-                                <div class="col-md-1 margin-vert-20">
+                                <div class="col-md-2 margin-vert-20">
                                     <i class="fa-list fa-3x color-primary"></i>
                                 </div>
 
-                                <div class="col-md-11 margin-vert-30">
+                                <div class="col-md-10 margin-vert-30">
                                     <h3>
                                         История занятий
                                         <a th:href="@{'/relations/' + ${relation.id} + '/history/list'}">Просмотреть</a>
                                     </h3>
                                 </div>
-
-                                <div class="col-md-1 margin-vert-20">
-                                    <i class="fa-list fa-3x color-primary"></i>
-                                </div>
-
-                                <div class="col-md-11 margin-vert-30">
-                                    <h3>
-                                        <p th:text="'Проведено занятий ' + ${#lists.size(relation.historyLessons)}"></p>
-                                    </h3>
-                                </div>
-
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -183,26 +221,6 @@
                         </div>
                     </div>
 
-                    <div class="row" th:if="${account}">
-                        <div th:if="${hasNewOrder}">
-                            <a th:href="@{'/tutors/' + *{id} + '/orders'}" class="btn btn-default">Заказы</a>
-                        </div>
-                        <div class="col-lg-12 text-right">
-                            <a th:href="@{'/tutors/' + *{id} + '/edit'}" class="btn btn-default">Редактировать
-                                данные</a>
-                        </div>
-                    </div>
-
-
-                    <!--<div class="row">-->
-                    <!--<h3 class="padding-top-10 pull-left">-->
-                    <!--Текущая процентная ставка: <p th:text="${invoice.rate}"></p>-->
-                    <!--К оплате : <p th:text="${invoice.amount}"></p> BYN-->
-                    <!--</h3>-->
-                    <!--<div class="col-lg-12 text-right">-->
-                    <!--<a th:href="@{*{id} + '/order'}" class="btn btn-default">Текущая ставка</a>-->
-                    <!--</div>-->
-                    <!--</div>-->
                     <hr/>
                     <div class="row">
                         <div class="col-md-6 animate fadeIn" th:if="${evaluation.id != null}">
